[package]
name = "sg"
version = "0.3.0"
authors = ["Dror Levin <spatz@psybear.com>"]
description = "Library for Linux's SCSI Generic (SG) interface"
repository = "https://github.com/drrlvn/sg"
license = "Apache-2.0"
edition = "2018"

[features]
default = []
polling = ["mio"]

[dependencies]
libc = "0.2.43"
nix = "0.11.0"
mio = {version = "0.6.16", optional = true}

[build-dependencies]
bindgen = "0.43.2"
